# dangerzone-image

./: .gitignore  .grype.yaml  Dockerfile  Dockerfile.env  Dockerfile.in  Makefile  README.md  build-image.py  pyproject.toml
.github/workflows/: build-push-branch.yml  build-push.yml  ci.yml  large-tests.yml  publish_dashboard.yml  release.yml  scan_nightly.yml  scan_released.yml  zizmor.yml
.github/workflows/actions/: build-push.yml
dev_scripts/large_tests/: merge_results.py  report.py
docs/: qubes.md  reproducibility.md  sign-image.md
qubes/: Dockerfile  build-rpm.sh  dangerzone-insecure-converter.spec
qubes/qubes-rpc/: dz.Convert  dz.ConvertDev
src/conversion/: common.py  doc_to_pixels.py  errors.py
src/dangerzone_insecure_converter/: __init__.py
src/helpers/: entrypoint.py
src/scripts/: image.py
templates/: html.tmpl
tests/: conftest.py  test_convert.py  test_large_set.py
tests/helpers/: test_entrypoint.py
utils/: attest_provenance.py  release-container-image.py  reproduce-image.py
