[project]
name = "dangerzone-insecure-converter"

version = "1.0.0"
authors = [
    {name = "Freedom of the Press Foundation", email = "dangerzone@freedom.press"}
]
description = "Internal (INSECURE!) Dangerzone document to pixels conversion."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pymupdf",
    "python-magic",
]
license-files = ["LICENSE"]

[dependency-groups]
dev = [
    "click",
    "mazette",
    "pytest",
    "pytest-asyncio",
    "repro-build",
    "pytest-test-groups",
    "ruff",
    "ty",
]

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"

[project.scripts]
image = "scripts.image:cli"

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["F", "I"]

[tool.mazette.asset.cosign]
repo = "sigstore/cosign"
version = "<3.0.0"
platform."linux/amd64" = "cosign-linux-amd64"
platform."linux/arm64" = "cosign-linux-arm64"
platform."darwin/amd64" = "cosign-darwin-amd64"
platform."darwin/arm64" = "cosign-darwin-arm64"
executable = true
destination = "helpers/cosign"

[tool.mazette.asset.crane]
repo = "google/go-containerregistry"
version = ">=0.0.1"
platform."linux/amd64" = "go-containerregistry_Linux_x86_64.tar.gz"
platform."linux/arm64" = "go-containerregistry_Linux_arm64.tar.gz"
platform."darwin/amd64" = "go-containerregistry_Darwin_x86_64.tar.gz"
platform."darwin/arm64" = "go-containerregistry_Darwin_arm64.tar.gz"
destination = "helpers/crane"
extract = { globs = ["crane"], flatten = true }
executable = true
